--- a/mental-gym-pro-frontend/package.json
+++ b/mental-gym-pro-frontend/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.537.0",
     "next": "15.4.5",
     "postcss-load-config": "^6.0.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
