--- a/mental-gym-pro-frontend/package.json
+++ b/mental-gym-pro-frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/postcss": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -17,6 +18,8 @@
     "postcss-load-config": "^6.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.5.2",
+    "react-timer-hook": "^4.0.5",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
