--- a/mental-gym-pro-frontend/package.json
+++ b/mental-gym-pro-frontend/package.json
@@ -13,12 +13,14 @@
     "@tailwindcss/postcss": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.537.0",
     "next": "15.4.5",
     "postcss-load-config": "^6.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.8.0",
     "react-timer-hook": "^4.0.5",
     "tailwind-merge": "^3.3.1"
   },
