--- a/mental-gym-pro-backend/.env
+++ b/mental-gym-pro-backend/.env
@@ -1,3 +1,4 @@
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/mental-gym-pro
+MONGO_URI=mongodb://localhost:27017/mental-gym-pro
 JWT_SECRET=supersecreto123
