--- a/mental-gym-pro-backend/.env
+++ b/mental-gym-pro-backend/.env
@@ -1,4 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/mental-gym-pro
-MONGO_URI=mongodb://localhost:27017/mental-gym-pro
 JWT_SECRET=supersecreto123
+MONGO_URI=mongodb+srv://root:06qd5uY5ZeWNTXQf@cluster0.qcz8s.mongodb.net/mental-gym-pro?retryWrites=true&w=majorityDB_NAME=mental-gym-pro
