--- a/mental-gym-pro-frontend/netlify.toml
+++ b/mental-gym-pro-frontend/netlify.toml
@@ -2,8 +2,9 @@
   command = "npm run build"
   publish = ".next"
 
-[plugins]
+[[plugins]]
   package = "@netlify/plugin-nextjs"
+
 
 [functions]
   directory = "netlify/functions"
