--- a/mental-gym-pro-backend/package.json
+++ b/mental-gym-pro-backend/package.json
@@ -21,6 +21,7 @@
     "slugify": "^1.6.6"
   },
   "devDependencies": {
+    "cross-env": "^10.0.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2"
   }
