--- a/mental-gym-pro-frontend/netlify.toml
+++ b/mental-gym-pro-frontend/netlify.toml
@@ -2,5 +2,8 @@
   command = "npm run build"
   publish = ".next"
 
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
+[[redirects]]
+  from = "/api/*"
+  to = "https://mentalgym-pro.onrender.com/api/:splat"
+  status = 200
+  force = true
