--- a/mental-gym-pro-frontend/netlify.toml
+++ b/mental-gym-pro-frontend/netlify.toml
@@ -2,6 +2,9 @@
   command = "npm run build"
   publish = ".next"
 
+[plugins]
+  package = "@netlify/plugin-nextjs"
+
 [[redirects]]
   from = "/api/*"
   to = "https://mentalgym-pro.onrender.com/api/:splat"
